fixed overflow issue

--- a/src/theme/ShadowBox/ShadowBox.css
+++ b/src/theme/ShadowBox/ShadowBox.css
@@ -135,66 +135,3 @@
     }
   }
 }
-
-/*.shadowbox {
-position: fixed;
-bottom: 0;
-right: 0;
-left: 0;
-top: 0;
-z-index: 9999;
-
-&__box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #fff;
-  padding: 1em;
-  text-align: right;
-  box-shadow: 0 0 80px rgba(0, 0, 0, 0.6);
-  max-height: 90vh;
-  width: 600px;
-  max-width: 90vw;
-  overflow-y: auto;
-}
-
-&__content {
-  text-align: left;
-}
-
-&__shadow {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  top: 0;
-  background-color: #000;
-  opacity: 0;
-  cursor: pointer;
-}
-
-&__box {
-  transform: translateX(-50%) translateY(-30%) scale(0.9);
-}
-
-&__box,
-&__shadow {
-  opacity: 0;
-  will-change: opacity;
-  transition: all 200ms ease-in-out;
-}
-
-&[data-visible='true'] {
-  .shadowbox {
-    &__box {
-      opacity: 1;
-      transform: translateX(-50%) translateY(-50%) scale(1);
-    }
-
-    &__shadow {
-      opacity: 0.7;
-    }
-  }
-}
-}*/
